syntax = "proto3";

package services.auth_service;
import "common/entities.proto";

message ValidateTokensRequest {
  string accessToken = 1;
  string refreshToken = 2;
}

message ValidateTokensResponse {
  bool isAccessTokenValid = 1;
  bool isRefreshTokenValid = 2;
}

message UpdateTokensRequest {
  string refreshToken = 1;
}

message UpdateTokensResponse {
  common.AuthTokens updatedTokens = 1;
}

message CheckAuthorityRequest {
  string accessToken = 1;
  string route = 2;
}

message CheckAuthorityResponse {
  bool hasAccess = 1;
}