syntax = "proto3";

package services.auth_service;
import "services/auth_service/messages.proto";

service TokensService {
  rpc ValidateTokens (ValidateTokensRequest) returns (ValidateTokensResponse);
  rpc UpdateTokens (UpdateTokensRequest) returns (UpdateTokensResponse);
}

service AuthorityService {
  rpc CheckAuthority (CheckAuthorityRequest) returns (CheckAuthorityResponse);
}