syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.hackathonhub.serviceauth.grpc";


message TokenValidationRequest {
    string accessToken = 1;
    string refreshToken = 2;
}

message TokenValidationResponse {
    bool isAccessTokenValid = 1;
    bool isRefreshTokenValid = 2;
}

message RefreshTokensRequest {
    string refreshToken = 1;
}

message AuthTokens {
    string id = 1;
    string userId = 2;
    string accessToken = 3;
    string refreshToken = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message RefreshTokensResponse {
    AuthTokens updatedTokens = 1;
}

service Tokens {
    rpc tokensValidation(TokenValidationRequest) returns (TokenValidationResponse);
    rpc refreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse);
}